src/styles/scss/challenge.scss
#challenge {
  padding: 90px 140px;
  background: #fff;
  font-size: 16px;
  text-align: justify;

  .challenge-section-title {
    color: $primary;
    font-family: Avenir-Next-Medium;
  }

  .challenge-section-desc {
    color: $secondary;
    font-size: 18px;
  }
  
  ul {
    list-style-type: circle;
    padding-left: 2em;
    li {
      margin-top: 1em;
    }
  }
}

@media (max-width: 991px) {
  #challenge {
    padding: 90px;
  }
}

@media (max-width: 768px) {
  #challenge {
    padding: 75px 4%;
  }
}

